# funlogin

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: c5f3c914baf0_initial.py
docs/: README.md  openapi.json
docs/plans/: 2025-03-09-funlogin-auth-design.md  2025-03-09-funlogin-auth-implementation.md
example/: README.md  app.py  start_backend.sh  start_frontend.sh
example/frontend/: index.html
scripts/: generate_openapi.py
src/funlogin/: __init__.py  config.py  deps.py  router.py
src/funlogin/auth/: repository.py  router.py  service.py
src/funlogin/bind/: repository.py  router.py  service.py
src/funlogin/core/: database.py  jwt.py  response.py
src/funlogin/models/: __init__.py  bindings.py  user.py
src/funlogin/oauth/: qq.py  wechat.py
src/funlogin/sms/: aliyun.py  code_store.py
tests/: conftest.py  test_config.py  test_database.py  test_jwt.py  test_security.py
tests/auth/: test_repository.py  test_router.py  test_service.py
tests/bind/: test_bind_router.py  test_service.py
tests/oauth/: test_qq.py
tests/sms/: test_aliyun.py
