[project]
name = "funlogin"
version = "1.0.4"
description = "funlogin"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
[[project.authors]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/funlogin"
Releases = "https://github.com/farfarfun/funlogin/releases"

[tool.setuptools]
license-files = []
